Completed get/awaitPose() & TeaseScript.perform()